--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/supabase-js": "^2.46.1",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "^18.3.1",
+    "react-dialog": "^0.1.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "rehype-raw": "^7.0.0",
@@ -36,4 +38,3 @@
     "typescript": "^5"
   }
 }
-
