--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dialog": "^0.1.0",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
